Remove unnecessary google drive mount, add code to install necessary libraries

--- a/PCA_with_Translated_Mask_Output.ipynb
+++ b/PCA_with_Translated_Mask_Output.ipynb
@@ -22,30 +22,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "yvMmP3dIRw4U"
-   },
-   "source": [
-    "Common libraries"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "sgMNM03rMofc"
-   },
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "import numpy as np\n",
-    "import cv2 as cv\n",
-    "import os\n",
-    "from datetime import datetime"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "ORCZLvMGRziu"
    },
    "source": [
@@ -64,7 +40,7 @@
    },
    "outputs": [],
    "source": [
-    "!git clone https://github.com/Rene-Michel99/Mask-RCNN-TF2.8.git"
+    "!git clone 'https://github.com/Rene-Michel99/Mask-RCNN-TF2.8.git'"
    ]
   },
   {
@@ -103,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r ./requirements.txt"
+    "!pip install -r './requirements.txt'"
    ]
   },
   {
@@ -127,6 +103,40 @@
     "from mrcnn.model import MaskRCNN\n",
     "from mrcnn.Utils import visualize\n",
     "from mrcnn.Configs import Config"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "yvMmP3dIRw4U"
+   },
+   "source": [
+    "Common libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install roboflow\n",
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "sgMNM03rMofc"
+   },
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "import cv2 as cv\n",
+    "import os\n",
+    "from datetime import datetime"
    ]
   },
   {
@@ -160,8 +170,6 @@
    },
    "outputs": [],
    "source": [
-    "!pip install roboflow\n",
-    "\n",
     "from roboflow import Roboflow\n",
     "rf = Roboflow(api_key=\"sDHrdDWd5USqSBR0E7on\")\n",
     "project = rf.workspace(\"medusas\").project(\"alitas-tcc_h\")\n",
@@ -353,40 +361,6 @@
    "outputs": [],
    "source": [
     "config.display()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "-ltSQ5ta02Np"
-   },
-   "source": [
-    "### Load weights from Drive"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "K0hNk6He0kr4"
-   },
-   "source": [
-    "Mount Drive"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "NvC6B-mL0hr2",
-    "outputId": "8fdb930c-d292-4d88-cae5-9c83a8aacaf4"
-   },
-   "outputs": [],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount(\"/content/drive\")"
    ]
   },
   {
