fix functions with no return

--- a/PCA_with_Translated_Mask_Output.ipynb
+++ b/PCA_with_Translated_Mask_Output.ipynb
@@ -79,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -r './requirements.txt'"
+    "!pip install -r ./requirements.txt"
    ]
   },
   {
@@ -435,6 +435,8 @@
     "        detection = model.detect([img], verbose=0)[0]\n",
     "        predictions[img_path] = detection\n",
     "    \n",
+    "    return predictions \n",
+    "    \n",
     "predictions = inference_on_dataset(dataset_test)"
    ]
   },
@@ -529,6 +531,7 @@
     "            diagonals_of_img_masks.append(diagonal)\n",
     "\n",
     "        diagonals[img_file_path] = diagonals_of_img_masks\n",
+    "        \n",
     "\n",
     "diagonals = get_all_diagonals(predictions)"
    ]
