--- a/PCA_with_Translated_Mask_Output.ipynb
+++ b/PCA_with_Translated_Mask_Output.ipynb
@@ -532,6 +532,7 @@
     "\n",
     "        diagonals[img_file_path] = diagonals_of_img_masks\n",
     "        \n",
+    "    return diagonals\n",
     "\n",
     "diagonals = get_all_diagonals(predictions)"
    ]
