Add JSON serializing option (commented)

--- a/PCA_with_Translated_Mask_Output.ipynb
+++ b/PCA_with_Translated_Mask_Output.ipynb
@@ -529,8 +529,12 @@
     "            \n",
     "            # get the contour with the most points\n",
     "            contour = max(contours, key=lambda x: x.shape[0])\n",
-    "            diagonal = calc_longest_diagonal_pca(contour)\n",
-    "            diagonals_of_img_masks.append(diagonal)\n",
+    "            \n",
+    "            start, end, length = calc_longest_diagonal_pca(contour)\n",
+    "            # # converting to regular int is needed for serializing in json\n",
+    "            # start = (int(start[0]), int(start[1]))\n",
+    "            # end = (int(end[0]), int(end[1]))\n",
+    "            diagonals_of_img_masks.append((start, end, length)))\n",
     "\n",
     "        diagonals[img_file_path] = diagonals_of_img_masks\n",
     "        \n",
